--- a/views/layouts/bootstrap.pug
+++ b/views/layouts/bootstrap.pug
@@ -1,3 +1,3 @@
-link(rel="stylesheet", href="/bootstrap-5.0.0-beta2-dist/css/bootstrap.min.css")
-script(src="/bootstrap-5.0.0-beta2-dist/js/bootstrap.bundle.min.js")
-link(rel="stylesheet", href="/bootstrap-icons-1.3.0/bootstrap-icons.css")
+link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js")
+link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css")
