--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -11,14 +11,14 @@ html.h-100
     nav.navbar.navbar-expand.align-items-end
       div.navbar-header.nav-tabs: div.navbar-brand
         h3 Webfocus
-        h6= configuration['name']
+        h6= configuration.name
       ul.nav.nav-tabs.w-100
         mixin nava(path) 
-          - let klass = req.params?.view == path ? 'nav-link active' : 'nav-link'
-          li.nav-item: a(href='/'+path, class=klass)= path
+          - let klass = req.path.indexOf(`/${path}`) === 0 ? 'nav-link active' : 'nav-link'
+          li.nav-item: a(href=`/${path}/`, class=klass)= path
         - for(let path of configuration.components)
           +nava(path)
     main.container
       block main
     footer.mt-auto
-      div.footer.px-5.pt-2.mt-3.bg-danger Footer
+      div.footer.px-5.pt-2.mt-3 Diogo Almiro 2021
