--- a/views/layouts/head.pug
+++ b/views/layouts/head.pug
@@ -3,4 +3,5 @@ title Webfocus - #{configuration['name']}
 meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
 meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
+script const apibaseurl = "!{apibaseurl}"
 script(src="/util/fetch.js")
