--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -19,11 +19,11 @@ html.h-100
           span.navbar-toggler-icon
         div#navbar.collapse.navbar-collapse
           ul.navbar-nav.me-auto.mb-2
-            mixin nava(path) 
-              - let klass = req.path.indexOf(`/${path}`) === 0 ? 'nav-link active' : 'nav-link'
-              li.nav-item: a(href=`/${path}/`, class=klass)= path
+            mixin nava(component) 
+              - let klass = req.path.indexOf(component.urlname) === 0 ? 'nav-link active' : 'nav-link'
+              li.nav-item: a(href=`/${component.urlname}/`, class=klass)= component.name
             - for(let path of configuration.components)
-              +nava(getComponent(path).name)
+              +nava(getComponent(path))
     main.container.my-2
       block main
     footer.mt-auto
