--- a/views/layouts/head.pug
+++ b/views/layouts/head.pug
@@ -21,3 +21,4 @@ script
     | const apibaseurl = "!{apibaseurl}"
     | const componentbaseurl = "!{componentbaseurl}"
 script(src="/util/fetch.js")
+script(src="/util/events.js")
