--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -32,8 +32,9 @@ html.h-100
           span.navbar-toggler-icon
         div#navbar.collapse.navbar-collapse
           ul.navbar-nav.me-auto.mb-2
+            - let isCurr = (c) => componentbaseurl ? componentbaseurl.indexOf(c.urlname) >= 0 : false
             mixin nava(component) 
-              - let klass = req.path.indexOf(component.urlname) === 0 ? 'nav-link active' : 'nav-link'
+              - let klass = isCurr(component) ? 'nav-link active' : 'nav-link'
               li.nav-item: a(href=`/${component.urlname}/`, class=klass)= component.name
             - for(let path of configuration.components)
               +nava(getComponent(path))
