Removed Bootstrap dependencie

--- a/views/layouts/error.pug
+++ b/views/layouts/error.pug
@@ -1,4 +1,14 @@
 extends ./main.pug
 
+block head
+  style.
+    main {
+      font-family: monospace;
+      background: var(--red-300);
+      border: 1px solid;
+      color: var(--red-100);
+      border-radius: 3px;
+    }
+
 block main
-  pre.alert.alert-danger= error
+  p= error
