--- a/views/layouts/error.pug
+++ b/views/layouts/error.pug
@@ -8,6 +8,7 @@ block head
       border: 1px solid;
       color: var(--red-100);
       border-radius: 3px;
+      white-space: pre-wrap;
     }
 
 block main
