--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,30 +1,34 @@
+@import url('/bootstrap/css/bootstrap.min.css');
 @import url('/webfocus-static/css/colors.css');
 
-body {
+/*body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
     color: var(--black-100);
-}
+}*/
 
-a, a:hover, a:focus, a:visited {
+/*a, a:hover, a:focus, a:visited {
     color: inherit;
     text-decoration: none;
     outline: none;
     color: var(--primary-300);
-}
+}*/
 
 header {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    box-shadow: 0 0 10px -5px var(--black-300);
+    box-shadow: 0 0 10px -5px #000;
+    margin-bottom: 1em;
 }
 
 header > #brand {
     display: flex;
     align-items: center;
     padding: 0.2em;
+    text-decoration: none;
+    color: midnightblue;
 }
 
 header > #brand:before {
@@ -59,35 +63,18 @@ header > nav > ul > li {
 header > nav > ul > li > a {
     padding: 0.8em 0.4em;
     display: block;
+    text-decoration: none;
 
 }
 
 header > nav > ul > li > a.active {
-    color: var(--primary-100);
+    color: midnightblue;
     position: relative;
 }
 
-a.active:after {
-    width: 100%;
-    height: 3px;
-    background: var(--primary-300);
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 0;
-}
-
-main {
-    display: block;
-    margin: 1em auto 2em;
-    width: fit-content;
-    min-width: 380px;
-    max-width: 100vw;
-    padding: 1em 2em;
-    box-shadow: 0 0 10px -5px var(--black-300);
-}
 
 footer {
+    margin-top: 1em;
     padding: 1em;
-    box-shadow: 0 -5px 10px -10px var(--black-300);
+    box-shadow: 0 -5px 10px -10px #000;
 }
